Walk frame tree to find main frame

When running with full site isolation, using the (deprecated) route via
the RVH doesn't work

BUG=789338
R=dcheng@chromium.org

Change-Id: Iba8fdf050933a3fae05734e91d2360432738fd3d
Reviewed-on: https://chromium-review.googlesource.com/795716
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520060}
Former-commit-id: 4f59a790e19f97e8bbdbb6e7960883c1e1cf0234