content/browser/shared_worker/shared_worker_service_impl.cc
@@ -121,9 +121,11 @@ void SharedWorkerServiceImpl::ConnectToWorker(
   DCHECK_CURRENTLY_ON(BrowserThread::UI);
 
   if (RenderFrameHost::FromID(process_id, frame_id)) {
-    RenderFrameHost* main_frame = RenderFrameHost::FromID(process_id, frame_id)
-                                      ->GetRenderViewHost()
-                                      ->GetMainFrame();
+    RenderFrameHost* main_frame =
+        RenderFrameHostImpl::FromID(process_id, frame_id)
+            ->frame_tree_node()
+            ->frame_tree()
+            ->GetMainFrame();
 
     if (!GetContentClient()->browser()->AllowSharedWorker(
             info->url, main_frame->GetLastCommittedURL(), info->name,
